# ipm-ws

./: .gitignore  .gitmodules  README.md
.github/workflow/: ros-2-ci.yaml
.github/workflows/: ros-2-ci.yaml
install/: local_setup.sh  setup.sh
install/biped_interfaces/share/biped_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/biped_interfaces/share/biped_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  biped_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  biped_interfaces__rosidl_typesupport_cppExport.cmake  biped_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  biped_interfaces__rosidl_typesupport_introspection_cExport.cmake  biped_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  biped_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_biped_interfaces__rosidl_generator_cExport-noconfig.cmake  (+7 more)
install/humanoid_base_footprint/lib/humanoid_base_footprint/: base_footprint
install/humanoid_base_footprint/share/humanoid_base_footprint/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ipm_image_node/lib/ipm_image_node/: ipm
install/ipm_image_node/share/ipm_image_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ipm_interfaces/share/ipm_interfaces/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ipm_library/share/ipm_library/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ipm_service/lib/ipm_service/: ipm_service
install/ipm_service/share/ipm_service/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/rot_conv/share/rot_conv/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vision_msgs/share/vision_msgs/: local_setup.sh  package.dsv  package.ps1  package.sh  package.zsh
install/vision_msgs_rviz_plugins/share/vision_msgs_rviz_plugins/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/camera_calibration/: calibration  calibration.cpp  convert  convert_matrix.cpp  get_projection.py  validation  validation.cpp
src/camera_calibration/outputs/: ConversionResult.json
src/kokoromi_cpp/: CMakeLists.txt  package.xml
src/kokoromi_cpp/data/: CalibrationMatrix.json  ConversionResult.json  PointCloudData.json  PointCloudData.yaml
src/kokoromi_cpp/src/: camera_info_publisher.cpp  camera_info_subscriber.cpp  image_publisher.cpp  image_subscriber.cpp  projected_pointcloud_subscriber.cpp
src/shisen_interfaces/: CMakeLists.txt  README.md  package.xml
src/shisen_interfaces/.github/workflows/: build-and-test-nightly.yml  build-and-test-stable.yml  build-debian-nightly.yml  build-debian-stable.yml
src/shisen_interfaces/msg/: CameraConfig.msg  CaptureSetting.msg  Image.msg
src/shisen_interfaces/srv/: ConfigureCaptureSetting.srv
(+224 files in other folders)
